--- a/CommandLib/CommandLib.vcxproj.filters
+++ b/CommandLib/CommandLib.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="CommandLib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CommandServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
