--- a/CommandLib/CommandLib.vcxproj.filters
+++ b/CommandLib/CommandLib.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="CommandLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HandleGuard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandLib.cpp">
