--- a/CommandLib/CommandLib.vcxproj
+++ b/CommandLib/CommandLib.vcxproj
@@ -143,13 +143,13 @@
     <ClInclude Include="CommandResponse.h" />
     <ClInclude Include="CommandServer.h" />
     <ClInclude Include="HandleGuard.h" />
-    <ClInclude Include="MyStruct.h" />
+    <ClInclude Include="CommandMessage.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandClient.cpp" />
     <ClCompile Include="CommandResponse.cpp" />
     <ClCompile Include="CommandServer.cpp" />
-    <ClCompile Include="MyStruct.cpp" />
+    <ClCompile Include="CommandMessage.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
