--- a/CommandLib/CommandLib.vcxproj
+++ b/CommandLib/CommandLib.vcxproj
@@ -140,14 +140,13 @@
   <ItemGroup>
     <ClInclude Include="CommandClient.h" />
     <ClInclude Include="CommandLib.h" />
-    <ClInclude Include="CommandResponse.h" />
     <ClInclude Include="CommandServer.h" />
+    <ClInclude Include="Exceptions.h" />
     <ClInclude Include="HandleGuard.h" />
     <ClInclude Include="CommandMessage.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandClient.cpp" />
-    <ClCompile Include="CommandResponse.cpp" />
     <ClCompile Include="CommandServer.cpp" />
     <ClCompile Include="CommandMessage.cpp" />
   </ItemGroup>
