--- a/ConfigServiceUser/ConfigServiceUser.vcxproj.filters
+++ b/ConfigServiceUser/ConfigServiceUser.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CommandServer.cpp">
+    <ClCompile Include="ConfigServiceUser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
